--- a/src/main/resources/fxml/comparisonScreens/ColumnSettingsScreen.fxml
+++ b/src/main/resources/fxml/comparisonScreens/ColumnSettingsScreen.fxml
@@ -11,19 +11,19 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<?import javafx.scene.layout.Region?>
 <AnchorPane prefHeight="600.0" prefWidth="800.0" styleClass="main-container" stylesheets="@css/Main.css, @css/SelectTablesScreen.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.luksosilva.dbcomparator.controller.comparisonScreens.ColumnSettingsScreenController">
     <children>
 
         <!-- Title text -->
-        <HBox alignment="CENTER" spacing="10.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="23.0">
+        <HBox alignment="CENTER" spacing="10.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="25.0">
             <children>
                 <Region HBox.hgrow="ALWAYS" />
-                <Text text="configure as colunas das tabelas selecionadas" styleClass="title-text">
+                <Text styleClass="title-text" text="configure as colunas das tabelas selecionadas">
                     <font>
                         <Font size="30.0" />
                     </font>
@@ -32,7 +32,7 @@
             </children>
         </HBox>
 
-        <VBox alignment="TOP_CENTER" layoutX="-1.0" layoutY="89.0" prefHeight="438.0" prefWidth="960.0" spacing="10.0" AnchorPane.bottomAnchor="73.0" AnchorPane.leftAnchor="-1.0" AnchorPane.rightAnchor="1.0" AnchorPane.topAnchor="89.0">
+        <VBox alignment="TOP_CENTER" layoutX="-1.0" layoutY="89.0" prefHeight="438.0" prefWidth="960.0" spacing="10.0" AnchorPane.bottomAnchor="80.0" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="25.0" AnchorPane.topAnchor="90.0">
             <padding>
                 <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
             </padding>
