--- a/src/main/resources/fxml/comparisonScreens/SetFiltersScreen.fxml
+++ b/src/main/resources/fxml/comparisonScreens/SetFiltersScreen.fxml
@@ -3,71 +3,57 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Accordion?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.control.ToggleButton?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
 <AnchorPane prefHeight="600.0" prefWidth="800.0" styleClass="main-container" stylesheets="@css/Main.css, @css/SelectTablesScreen.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.luksosilva.dbcomparator.controller.comparisonScreens.SetFiltersScreenController">
     <children>
-
-        <!-- Title text -->
-        <Text layoutX="207.0" layoutY="58.0" styleClass="title-text" text="selecione as tabelas a serem comparadas">
-            <font>
-                <Font size="30.0" />
-            </font>
-        </Text>
-
-        <VBox alignment="TOP_CENTER" layoutX="-1.0" layoutY="89.0" prefHeight="438.0" prefWidth="960.0" spacing="10.0" AnchorPane.bottomAnchor="73.0" AnchorPane.leftAnchor="-1.0" AnchorPane.rightAnchor="1.0" AnchorPane.topAnchor="89.0">
-            <padding>
-                <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-            </padding>
-
-            <children>
-                <!-- Header Background Container -->
-                <VBox spacing="5.0" styleClass="table-header-container">
-                    <padding>
-                        <Insets bottom="5" left="5" right="5" top="5" />
-                    </padding>
-                    <children>
-                        <HBox alignment="CENTER_LEFT" spacing="10.0">
-                            <children>
-
-                                <Pane HBox.hgrow="ALWAYS" />
-
-                                <ComboBox fx:id="filterTypeComboBox" prefHeight="20.0" prefWidth="144.0" />
-
-                                <TextField fx:id="searchTextField" prefWidth="200.0" promptText="buscar tabela..." />
-
-                                <ToggleButton fx:id="filterToggleButton" mnemonicParsing="false" prefHeight="25.0" prefWidth="25.0" />
-
-                            </children>
-                        </HBox>
-                    </children>
-                </VBox>
-                <HBox fx:id="filtersHBox" prefHeight="59.0" prefWidth="663.0" spacing="10.0" visible="false" managed="false">
-                    <children>
-                        <CheckBox fx:id="showDiffRecordCountOnlyCheckBox" prefHeight="19.0" prefWidth="400.0" text="Apenas tabelas com número de registros diferentes entre as fontes" />
-                        <CheckBox fx:id="showInAllSourcesOnlyCheckBox" prefHeight="19.0" prefWidth="299.0" text="Apenas tabelas existentes em todas as fontes" />
-                        <CheckBox fx:id="showSelectedOnlyCheckBox" prefHeight="19.0" prefWidth="196.0" text="Apenas tabelas selecionadas" />
-                    </children>
-                </HBox>
-
-                <!-- ScrollPane with Accordion -->
-                <ScrollPane fx:id="scrollPane" fitToWidth="true" prefHeight="361.0" prefWidth="695.0" VBox.vgrow="ALWAYS">
-                    <content>
-                        <Accordion fx:id="tablesAccordion" />
-                    </content>
-                </ScrollPane>
-            </children>
-        </VBox>
+      <HBox alignment="CENTER" layoutX="1.0" layoutY="14.0" prefHeight="40.0" prefWidth="691.0" spacing="10.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="25.0">
+         <children>
+            <Region HBox.hgrow="ALWAYS" />
+            <Text styleClass="title-text" text="configure os filtros para comparação">
+               <font>
+                  <Font size="30.0" />
+               </font>
+            </Text>
+            <Region HBox.hgrow="ALWAYS" />
+         </children>
+      </HBox>
+      <VBox alignment="TOP_CENTER" layoutX="14.0" layoutY="93.0" prefHeight="430.0" prefWidth="915.0" spacing="10.0" AnchorPane.bottomAnchor="80.0" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="25.0" AnchorPane.topAnchor="90.0">
+         <padding>
+            <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+         </padding>
+         <children>
+            <VBox spacing="5.0" styleClass="table-header-container">
+               <padding>
+                  <Insets bottom="5" left="5" right="5" top="5" />
+               </padding>
+               <children>
+                  <HBox alignment="CENTER_LEFT" spacing="10.0">
+                     <children>
+                        <Button fx:id="addFilterBtn" mnemonicParsing="false" prefHeight="25.0" prefWidth="101.0" text="Adicionar Filtro" onAction="#OnAddFilterButtonClicked" />
+                        <Pane HBox.hgrow="ALWAYS" />
+                        <ComboBox fx:id="filterTypeComboBox" prefHeight="20.0" prefWidth="144.0" />
+                        <TextField fx:id="searchTextField" prefWidth="200.0" promptText="buscar tabela..." />
+                     </children>
+                  </HBox>
+               </children>
+            </VBox>
+            <ScrollPane fx:id="scrollPane" fitToWidth="true" prefHeight="339.0" prefWidth="916.0">
+               <content>
+                  <Accordion fx:id="tablesAccordion" />
+               </content>
+            </ScrollPane>
+         </children>
+      </VBox>
         <Button fx:id="nextStepBtn" layoutX="783.0" layoutY="535.0" mnemonicParsing="false" onMouseClicked="#nextStep" prefHeight="61.0" prefWidth="198.0" styleClass="btn-primary" text="AVANÇAR" AnchorPane.bottomAnchor="25.0" AnchorPane.rightAnchor="22.0" />
         <Button fx:id="previousStepBtn" layoutX="651.0" layoutY="535.0" mnemonicParsing="false" onMouseClicked="#previousStep" prefHeight="61.0" prefWidth="198.0" styleClass="btn-secondary" text="VOLTAR" AnchorPane.bottomAnchor="25.0" AnchorPane.rightAnchor="199.0" />
         <Text fx:id="cancelBtn" layoutX="570.0" layoutY="560.0" onMouseClicked="#cancelComparison" styleClass="cancel-text" text="CANCELAR" AnchorPane.bottomAnchor="37.0" AnchorPane.rightAnchor="328.0" />
