--- a/src/main/resources/fxml/dialogs/AddFilterDialog.fxml
+++ b/src/main/resources/fxml/dialogs/AddFilterDialog.fxml
@@ -5,6 +5,8 @@
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.Tooltip?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -19,57 +21,87 @@
         <padding>
             <Insets bottom="20" left="20" right="20" top="20" />
         </padding>
-
-        <Label fx:id="titleLabel" styleClass="dialog-title" text="Adicionar novo filtro" />
+      <HBox prefHeight="17.0" prefWidth="360.0">
+         <children>
+      
+              <Label fx:id="titleLabel" styleClass="dialog-title" text="Adicionar novo filtro" />
+            <Region prefHeight="39.0" prefWidth="122.0" HBox.hgrow="ALWAYS" />
+            <VBox prefHeight="39.0" prefWidth="78.0" spacing="5.0">
+               <children>
+                  <RadioButton fx:id="defaultFilterRadioButton" mnemonicParsing="false" selected="true" text="Padrão" />
+                  <RadioButton fx:id="advancedFilterRadioButton" mnemonicParsing="false" text="Avançado" />
+               </children>
+               <HBox.margin>
+                  <Insets />
+               </HBox.margin>
+            </VBox>
+         </children>
+      </HBox>
          <VBox prefHeight="235.0" prefWidth="360.0" spacing="8">
          <children>
-            <VBox prefHeight="200.0" prefWidth="100.0">
+            <VBox prefHeight="32.0" prefWidth="360.0">
                <children>
                   <Label text="Tabela" />
                    <ComboBox fx:id="tableComboBox" editable="true" prefHeight="25.0" prefWidth="378.0" visibleRowCount="5" />
                </children>
             </VBox>
-            <VBox prefHeight="200.0" prefWidth="100.0">
+            <VBox fx:id="defaultFilterFieldsBox"  prefHeight="184.0" prefWidth="360.0">
                <children>
-                  <Label text="Campo" />
-                   <ComboBox fx:id="columnComboBox" disable="true" editable="true" prefHeight="25.0" prefWidth="360.0" visibleRowCount="5" />
-               </children>
-            </VBox>
-            <VBox prefHeight="200.0" prefWidth="100.0">
-               <children>
-                  <Label text="Tipo de Filtro" />
-                  <ComboBox fx:id="filterTypeComboBox" disable="true" prefHeight="25.0" prefWidth="360.0" visibleRowCount="5" />
-               </children>
-            </VBox>
-            <VBox prefHeight="200.0" prefWidth="100.0">
-               <children>
-                  <HBox fx:id= "filterHeaderHBox" alignment="CENTER_RIGHT">
+                  <VBox prefHeight="200.0" prefWidth="100.0">
                      <children>
-                        <Label text="Filtro" />
+                        <Label text="Campo" />
+                         <ComboBox fx:id="columnComboBox" disable="true" editable="true" prefHeight="25.0" prefWidth="360.0" visibleRowCount="5" />
+                     </children>
+                  </VBox>
+                  <VBox prefHeight="200.0" prefWidth="100.0">
+                     <children>
+                        <Label text="Tipo de Filtro" />
+                        <ComboBox fx:id="filterTypeComboBox" disable="true" prefHeight="25.0" prefWidth="360.0" visibleRowCount="5" />
+                     </children>
+                  </VBox>
+                  <VBox prefHeight="200.0" prefWidth="100.0">
+                     <children>
+                        <HBox fx:id="filterHeaderHBox" alignment="CENTER_RIGHT">
+                           <children>
+                              <Label text="Filtro" />
+                              <Region HBox.hgrow="ALWAYS" />
+                              <Label fx:id="filterTipLabel" alignment="CENTER">
+                                 <font>
+                                    <Font size="10.0" />
+                                 </font>
+                              </Label>
+                           </children>
+                        </HBox>
+                        <HBox fx:id="oneTextFieldHBox" disable="true" prefHeight="100.0" prefWidth="200.0">
+                           <children>
+                              <TextField fx:id="filterTextField" prefHeight="25.0" prefWidth="360.0" promptText="Digite o Filtro..." />
+                           </children>
+                        </HBox>
+                        <HBox fx:id="twoTextFieldsHBox" alignment="CENTER_LEFT" disable="true" managed="false" prefHeight="100.0" prefWidth="200.0" visible="false">
+                           <children>
+                              <TextField fx:id="lowerValueTextField" prefHeight="25.0" prefWidth="167.0" promptText="Digite o Menor Valor..." />
+                              <Label text="E">
+                                 <padding>
+                                    <Insets left="10.0" right="10.0" />
+                                 </padding>
+                              </Label>
+                              <TextField fx:id="higherValueTextField" prefHeight="25.0" prefWidth="167.0" promptText="Digite o Maior Valor..." />
+                           </children>
+                        </HBox>
+                     </children>
+                  </VBox>
+               </children>
+            </VBox>
+            <VBox fx:id="advancedFilterFieldsBox" prefHeight="200.0" prefWidth="100.0" managed="false" visible="false">
+               <children>
+                  <HBox prefHeight="17.0" prefWidth="322.0">
+                     <children>
+                        <Label prefHeight="17.0" prefWidth="119.0" text="Consulta SQL" />
                         <Region HBox.hgrow="ALWAYS" />
-                        <Label fx:id="filterTipLabel" alignment="CENTER" >
-                           <font>
-                              <Font size="10.0" />
-                           </font>
-                        </Label>
+                        <Label prefHeight="17.0" prefWidth="311.0" text="insira a cláusula WHERE" />
                      </children>
                   </HBox>
-                  <HBox fx:id="oneTextFieldHBox" prefHeight="100.0" prefWidth="200.0" disable="true" >
-                     <children>
-                        <TextField fx:id="filterTextField" prefHeight="25.0" prefWidth="360.0" promptText="Digite o Filtro..."/>
-                     </children>
-                  </HBox>
-                  <HBox fx:id="twoTextFieldsHBox" alignment="CENTER_LEFT" managed="false" prefHeight="100.0" prefWidth="200.0" visible="false" disable="true">
-                     <children>
-                        <TextField fx:id="lowerValueTextField" prefHeight="25.0" prefWidth="167.0" promptText="Digite o Menor Valor..." />
-                        <Label text="E">
-                           <padding>
-                              <Insets left="10.0" right="10.0" />
-                           </padding>
-                        </Label>
-                        <TextField fx:id="higherValueTextField" prefHeight="25.0" prefWidth="167.0" promptText="Digite o Maior Valor..." />
-                     </children>
-                  </HBox>
+                  <TextArea fx:id="advancedFilterTextArea" prefHeight="200.0" prefWidth="200.0" disable="true" />
                </children>
             </VBox>
          </children>
