--- a/src/main/resources/fxml/comparisonScreens/ComparisonResultScreen.fxml
+++ b/src/main/resources/fxml/comparisonScreens/ComparisonResultScreen.fxml
@@ -19,7 +19,7 @@
       <HBox alignment="CENTER" layoutX="1.0" layoutY="14.0" prefHeight="40.0" prefWidth="691.0" spacing="10.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="25.0">
          <children>
             <Region HBox.hgrow="ALWAYS" />
-            <Text styleClass="title-text" text="configure os filtros para comparação">
+            <Text styleClass="title-text" text="resultado da comparação">
                <font>
                   <Font size="30.0" />
                </font>
@@ -27,7 +27,7 @@
             <Region HBox.hgrow="ALWAYS" />
          </children>
       </HBox>
-      <VBox alignment="TOP_CENTER" layoutX="14.0" layoutY="93.0" prefHeight="430.0" prefWidth="915.0" spacing="10.0" AnchorPane.bottomAnchor="80.0" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="25.0" AnchorPane.topAnchor="90.0">
+      <VBox alignment="TOP_CENTER" layoutX="23.0" layoutY="105.0" prefHeight="438.0" prefWidth="960.0" spacing="10.0" AnchorPane.bottomAnchor="80.0" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="25.0" AnchorPane.topAnchor="90.0">
          <padding>
             <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
          </padding>
@@ -39,7 +39,6 @@
                <children>
                   <HBox alignment="CENTER_LEFT" spacing="10.0">
                      <children>
-                        <Button fx:id="addFilterBtn" mnemonicParsing="false" prefHeight="25.0" prefWidth="101.0" text="Adicionar Filtro" onAction="#OnAddFilterButtonClicked" />
                         <Pane HBox.hgrow="ALWAYS" />
                         <ComboBox fx:id="filterTypeComboBox" prefHeight="20.0" prefWidth="144.0" />
                         <TextField fx:id="searchTextField" prefWidth="200.0" promptText="buscar tabela..." />
@@ -54,8 +53,7 @@
             </ScrollPane>
          </children>
       </VBox>
-        <Button fx:id="nextStepBtn" layoutX="783.0" layoutY="535.0" mnemonicParsing="false" onMouseClicked="#nextStep" prefHeight="61.0" prefWidth="198.0" styleClass="btn-primary" text="AVANÇAR" AnchorPane.bottomAnchor="25.0" AnchorPane.rightAnchor="22.0" />
-        <Button fx:id="previousStepBtn" layoutX="651.0" layoutY="535.0" mnemonicParsing="false" onMouseClicked="#previousStep" prefHeight="61.0" prefWidth="198.0" styleClass="btn-secondary" text="VOLTAR" AnchorPane.bottomAnchor="25.0" AnchorPane.rightAnchor="199.0" />
-        <Text fx:id="cancelBtn" layoutX="570.0" layoutY="560.0" onMouseClicked="#cancelComparison" styleClass="cancel-text" text="CANCELAR" AnchorPane.bottomAnchor="37.0" AnchorPane.rightAnchor="328.0" />
+        <Button fx:id="nextStepBtn" layoutX="783.0" layoutY="535.0" mnemonicParsing="false" prefHeight="61.0" prefWidth="198.0" styleClass="btn-primary" text="SALVAR" AnchorPane.bottomAnchor="25.0" AnchorPane.rightAnchor="22.0" />
+        <Button fx:id="previousStepBtn" layoutX="651.0" layoutY="535.0" mnemonicParsing="false" prefHeight="61.0" prefWidth="198.0" styleClass="btn-secondary" text="SAIR" AnchorPane.bottomAnchor="25.0" AnchorPane.rightAnchor="199.0" />
     </children>
 </AnchorPane>
